--- a/style.css
+++ b/style.css
@@ -117,3 +117,25 @@ body{
 	color:#333333;
 	font-family:"roboto";
 }
+.message{
+	width:80%;
+	height:auto;
+	background-color:#FFFFFF;
+	border-radius:10px;
+	padding:10px;
+	margin:5px 15% 5px 5%;
+	position:relative;
+	float:left;
+	color:#000000;
+}
+.mymessage{
+	width:80%;
+	height:auto;
+	background-color:#FFFFFF;
+	border-radius:10px;
+	padding:10px;
+	margin:5px auto 5px 5%;
+	position:relative;
+	float:right;
+	color:#000000;
+}
