--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 /* CSS Document */
 
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,700);
+@import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700);
 body{
 	position:relative;
 	padding:0;
@@ -9,15 +10,20 @@ body{
 	width:100vw;
 	height:auto;
 	overflow:hidden;
-	font-family:"roboto";
+	font-family:"Inconsolata";
+	background-color:#FFFFFF;
+}
+input{
+	font-family:"Inconsolata";
 }
 #rooms{
 	position:relative;
 	float:left;
 	width:20vw;
-	height:100vh;
-	background-color:#E6E6EB;
-	overflow-y:scroll;
+	height:95vh;
+	background-color:#FFFFFF;
+	overflow-y:auto;
+	overflow-x:hidden;
 }
 #roomList{
 	list-style:none;
@@ -27,34 +33,26 @@ body{
 }
 #roomList li{
 	list-style:none;
-	cursor:pointer;
+	cursor:default;
 	padding:0;
-	margin:0;
-	widows:100%;
+	margin:3px 3px 3px 3px;
+	width:auto;
 	height:100px;
-	background-color:#F7F7F7;
-	border-bottom:2px solid #999;
-}
-#roomList li:first-child{
-	list-style:none;
-	cursor:pointer;
-	padding:0;
-	margin:0;
-	widows:100%;
-	height:100px;
-	background-color:#F7F7F7;
-	border-bottom:2px solid #999;
-	border-top:2px solid #999;
+	background-color:#000;
+	border-bottom-right-radius:10px;
+	padding:5px;
+	overflow:hidden;
 }
 .rliTitle{
-	width:100%;
 	height:20px;
 	position:relative;
-	float:left;
 	line-height:20px;
 	font-size:18px;
-	color:#666666;
+	color:#000;
 	text-wrap:supress;
+	cursor:pointer;
+	background-color:#FFFFFF;
+	clear:both;
 	
 }
 .rlUsers{
@@ -64,22 +62,68 @@ body{
 	padding:0;
 }
 .rlUIcon{
-	width:25px;
-	height:25px;
-	border-radius:25px;
-	background-color:#333333;
+	width:30px;
+	height:30px;
+	border-radius:30px;
+	margin:3px;
+	background-color:#000;
 	float:left;
 	position:relative;
 	background-position:center;
 	background-repeat:no-repeat;
 	background-size:cover;
+	border:2px #FFF solid;
+	
+}
+.uiOptions{
+	display:none;
+	position:absolute;
+	top:25px;
+	left:0px;
+	background-color:#FFFFFF;
+	border:#000000 solid 2px;
+	border-radius:3px;
+	color:#000000;
+	height:20px;
+	line-height:20px;
+	font-size:16px;
+	padding:5px;
+	cursor:text;
+	width:auto;
+}
+.rlUIcon:hover .uiOptions{
+	display:block;
+}
+uiOptions:hover{
+	display:block;
+}
+.tti{
+	background-color:#000000;
+	color:#FFFFFF;
+	height:auto;
+	padding:2px;
+	cursor:pointer;
+}
+#addNew{
+	width:4vw;
+	margin:0 8vw 0 8vw;
+	background-color:#000000;
+	height:3vw;
+	line-height:3vw;
+	font-size:3vw;
+	color:#FFFFFF;
+	text-align:center;
+	position:relative;
+	border-bottom-right-radius:1vw;
+	border-bottom-left-radius:1vw;
+	cursor:pointer;
 }
 #chat{
 	position:relative;
 	float:left;
 	width:80vw;
-	height:100vh;
-	background-color:#000000;
+	height:95vh;
+	background-color:#FFFFFF;
 }
 #infoBar{
 	width:100%;
@@ -87,19 +131,20 @@ body{
 	float:left;
 	position:relative;
 	height:5vh;
-	border-bottom:solid 2px #F7F7F7;
+	color:#FFF;
 	box-sizing:border-box;
 	line-height:5vh;
 	font-size:4vh;
 	text-align:center;
-	background-color:#FFFFFF
+	background-color:#000;
 }
 #chatlog{
 	width:100%;
 	position:relative;
 	float:left;
 	height:80vh;
-	color:#FFFFFF;
+	color:#000000;
+	overflow-y:scroll;
 }
 #minput{
 	width:100%;
@@ -115,27 +160,82 @@ body{
 	resize:none;
 	font-size:20px;
 	color:#333333;
-	font-family:"roboto";
+	background-color:#FFFFFF;
+	font-family:"Inconsolata";
 }
 .message{
-	width:80%;
+	width:60%;
 	height:auto;
-	background-color:#FFFFFF;
+	background-color:#000000;
 	border-radius:10px;
 	padding:10px;
-	margin:5px 15% 5px 5%;
+	margin:5px auto 5px 10px;
 	position:relative;
 	float:left;
-	color:#000000;
+	color:#FFFFFF;
 }
 .mymessage{
-	width:80%;
+	width:60%;
 	height:auto;
-	background-color:#FFFFFF;
+	background-color:#000000;
 	border-radius:10px;
 	padding:10px;
-	margin:5px auto 5px 5%;
+	margin:5px 10px 5px auto;
 	position:relative;
 	float:right;
-	color:#000000;
+	color:#FFFFFF;
+}
+#addRoom{
+	width:304px;
+	height:auto;
+	position:absolute;
+	top:100px;
+	left:50%;
+	margin:0 0 0 -152px;
+	background-color:#000000;
+	border:solid 2px #FFFFFF;
+	border-radius:10px;
+	padding:10px;
+	color:#FFFFFF;
+	display:none;
+}
+#nrTable{
+	width:100%;
+	padding:0;
+	margin:0;
+}
+#nrTable tr, #nrTable td{
+	margin:0;
+	padding:0;
+}
+#nrName, #nrPass{
+	width:300px;
+	height:30px;
+	border-bottom:2px solid #FFF;
+	border-top:none;
+	border-left:none;
+	border-right:none;
+	margin:0;
+	position:relative;
+	background-color:#000000;
+	color:#FFFFFF;
+	line-height:30px;
+	font-size:22px;
+	outline: none;
+}
+.nrUser td{
+	border-bottom:solid 2px #FFFFFF;
+}
+.nrUser td:first-child{
+	width:40px;
+}
+.nrUser td:last-child{
+	width:40px;
+}
+#nrCreate, #nrCancel{
+	width:100%;
+	text-align:center;
+	line-height:30px;
+	font-size:25px;
+	cursor:pointer;
 }
