--- a/style.css
+++ b/style.css
@@ -240,3 +240,9 @@ uiOptions:hover{
 	font-size:25px;
 	cursor:pointer;
 }
+#creativeLink{
+	position:fixed;
+	z-index:1000;
+	color:#FFF;
+	text-decoration:none;
+}
